<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.gear2cam.official.LoginFragmentPortrait">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/instructionsOrLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:autoLink="web"
            android:linksClickable="true"
            android:fontFamily="fonts/FjallaOne-Regular.ttf"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/White"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/instructionsOrLink3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authenticated_noconnection"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:text="@string/gallery_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:layout_marginTop="10dp"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/login"
            bootstrapbutton:bb_icon_left="fa-facebook-square"
            bootstrapbutton:bb_type="primary"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/instructionsOrLink4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_option"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:text="@string/problems"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:shadowColor="@color/Shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:text="@string/website"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:shadowColor="@color/Shadow"
        android:layout_marginTop="10dp"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    <TextView
        android:text="@string/facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:shadowColor="@color/Shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:text="@string/twitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:shadowColor="@color/Shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</LinearLayout>
</ScrollView>