<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:weightSum="1.0"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    tools:context="com.gear2cam.official.AuthenticatedFragmentPortrait">

    <LinearLayout
        android:layout_weight=".5"
        android:layout_width="0dip"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:gravity="fill_vertical"
        android:layout_height="fill_parent">
        <TextView
            android:id="@+id/instructionsOrLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:autoLink="web"
            android:linksClickable="true"
            android:fontFamily="fonts/FjallaOne-Regular.ttf"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/White"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/instructionsOrLink3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authenticated_noconnection"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:text="@string/gallery_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:layout_marginTop="10dp"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:gravity="fill_vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/instructionsOrLink4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_option"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/login"
            bootstrapbutton:bb_icon_left="fa-facebook-square"
            bootstrapbutton:bb_type="primary"
            android:layout_gravity="center" />

        <TextView
            android:text="@string/problems"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:text="@string/website"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:layout_marginTop="10dp"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView
            android:text="@string/facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:text="@string/twitter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>
</LinearLayout>
</ScrollView>