<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.gear2cam.official.AuthenticatedFragmentPortrait">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="fonts/FjallaOne-Regular.ttf"
                android:shadowColor="@color/Shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:textColor="@color/White"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/authenticated_title"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/authenticated_noconnection"
                android:autoLink="web"
                android:linksClickable="true"
                android:textColor="@color/White"
                android:shadowColor="@color/Shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/cbEnablePublishing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/publish_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:shadowColor="@color/Shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>

            <TextView
                android:text="@string/gallery_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:shadowColor="@color/Shadow"
                android:layout_marginTop="10dp"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:text="@string/problems"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:text="@string/website"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:shadowColor="@color/Shadow"
                android:layout_marginTop="10dp"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView
            android:text="@string/facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:text="@string/twitter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dip"
            android:paddingTop="20dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_gravity="top" />
    </LinearLayout>
</LinearLayout>
</ScrollView>