<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:weightSum="1.0"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    tools:context="com.gear2cam.official.AuthenticatedFragmentPortrait">

    <LinearLayout
        android:layout_weight=".5"
        android:layout_width="0dip"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="fonts/FjallaOne-Regular.ttf"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/White"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingRight="20dp"
            android:text="@string/authenticated_title"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/authenticated_noconnection"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:paddingRight="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <CheckBox
                android:id="@+id/cbEnablePublishing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/publish_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:shadowColor="@color/Shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <TextView
            android:text="@string/gallery_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:layout_marginTop="10dp"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>


        <TextView
            android:text="@string/website"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:layout_marginTop="10dp"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView
            android:text="@string/facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:text="@string/twitter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:gravity="fill_vertical"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dip"
            android:paddingTop="10dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_gravity="top" />

        <TextView
            android:text="@string/problems"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:shadowColor="@color/Shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:paddingTop="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


    </LinearLayout>
</LinearLayout>
</ScrollView>